--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
     <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
   <div class="main">
-    <p id="add-task">
-      <label for="new-task">Add Item</label>
-      <div class="task-wrapper">
-        <input id="new-task" class="task" type="text">
-        <button>Add</button>
-      </div>
-    </p>
+    <h3 class="new-task">Add Item</h3>
+    <div class="task-wrapper">
+      <input id="new-task" class="task" type="text">
+      <button class="add">Add</button>
+    </div>
     <h3>Todo</h3>
     <ul id="incomplete-tasks">
       <li>
