--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body class="page">
   <div class="header">
-    <img src="./eisenhower-matrix.jpg">
+    <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
     <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
   <div class="main">
@@ -24,7 +24,7 @@
         <input type="text" class="task">
         <button class="edit">Edit</button>
         <button class="delete">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="delete">
         </button>
       </li>
       <li class="edit-mode">
@@ -33,7 +33,7 @@
         <input type="text" value="Go Shopping" class="task">
         <button class="edit">Save</button>
         <button class="delete">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="delete">
         </button>
       </li>
     </ul>
@@ -45,7 +45,7 @@
         <input type="text" class="task">
         <button class="edit">Edit</button>
         <button class="delete">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="delete">
         </button>
       </li>
     </ul>
