--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
   <div class="main">
-    <h3 class="new-task">Add Item</h3>
-    <div class="task-wrapper">
+    <h3>Add Item</h3>
+    <div class="new-task">
       <input id="new-task" class="task" type="text">
       <button class="add">Add</button>
     </div>
