--- a/index.html
+++ b/index.html
@@ -7,45 +7,45 @@
   </head>
   <body class="page">
     <div class="header">
-      <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
+      <img class="header-img" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="main">
-      <h3>Add Item</h3>
+      <h3 class="title">Add Item</h3>
       <div class="new-task">
-        <input id="new-task" class="task" type="text">
-        <button class="add">Add</button>
+        <input id="new-task" class="task-input" type="text">
+        <button class="btn add">Add</button>
       </div>
-      <h3>Todo</h3>
-      <ul id="incomplete-tasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="delete">
+      <h3 class="title">Todo</h3>
+      <ul class="list" id="incomplete-tasks">
+        <li class="list-item">
+          <input type="checkbox" class="task-checkbox">
+          <label class="task-label">Pay Bills</label>
+          <input type="text" class="task-input">
+          <button class="btn edit">Edit</button>
+          <button class="btn delete">
+            <img class="delete-img" src="./remove.svg" alt="delete">
           </button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="delete">
+        <li class="list-item edit-mode">
+          <input type="checkbox" class="c">
+          <label class="task-label">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task-input">
+          <button class="btn edit">Save</button>
+          <button class="btn delete">
+            <img class="delete-img" src="./remove.svg" alt="delete">
           </button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="delete">
+      <h3 class="title">Completed</h3>
+      <ul class="list" id="completed-tasks">
+        <li class="list-item">
+          <input type="checkbox" class="task-checkbox" checked>
+          <label class="task-label">See the Doctor</label>
+          <input type="text" class="task-input">
+          <button class="btn edit">Edit</button>
+          <button class="btn delete">
+            <img class="delete-img" src="./remove.svg" alt="delete">
           </button>
         </li>
       </ul>
